Revert "Updated to 0.0.1-zeta from 0.0.1-epsilon."
This reverts commit 74b55601f62ae6cd63b206d6005672e86748581d.